tests/snapshots/integration__compgen__mult_char.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN Bash `prog --oa abc,` ************
def
ijk

************ COMPGEN Elvish `prog --oa abc,` ************
abc,def	0	def	
abc,ijk	0	ijk	

************ COMPGEN Fish `prog --oa abc,` ************
abc,def
abc,ijk

************ COMPGEN Nushell `prog --oa abc,` ************
abc,def
abc,ijk

************ COMPGEN Powershell `prog --oa abc,` ************
'abc,def'	0	def	
'abc,ijk'	0	ijk	

************ COMPGEN Xonsh `prog --oa abc,` ************
abc,def	0	def	
abc,ijk	0	ijk	

************ COMPGEN Zsh `prog --oa abc,` ************
abc,def	def
abc,ijk	ijk


