tests/snapshots/integration__compgen__mult_char2.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN Bash `prog --oa=abc,` ************
def
ijk

************ COMPGEN Elvish `prog --oa=abc,` ************
--oa=abc,def	0	def		green
--oa=abc,ijk	0	ijk		green

************ COMPGEN Fish `prog --oa=abc,` ************
--oa=abc,def
--oa=abc,ijk

************ COMPGEN Nushell `prog --oa=abc,` ************
--oa=abc,def
--oa=abc,ijk

************ COMPGEN Powershell `prog --oa=abc,` ************
def	0	def		32
ijk	0	ijk		32

************ COMPGEN Xonsh `prog --oa=abc,` ************
--oa=abc,def	0	def	
--oa=abc,ijk	0	ijk	

************ COMPGEN Zsh `prog --oa=abc,` ************
--oa=abc,def	def	def	32
--oa=abc,ijk	ijk	ijk	32


