tests/snapshots/integration__compgen__multi_char.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN Bash `prog --oa abc,` ************
def
ijk

************ COMPGEN Fish `prog --oa abc,` ************
abc,def
abc,ijk

************ COMPGEN Nushell `prog --oa abc,` ************
abc,def
abc,ijk

************ COMPGEN Powershell `prog --oa abc,` ************
def	0	def		39
ijk	0	ijk		39

************ COMPGEN Zsh `prog --oa abc,` ************
abc,def	def	def	39
abc,ijk	ijk	ijk	39
