tests/snapshots/integration__compgen__multi_char2.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN Bash `prog --oa=abc,` ************
def
ijk

************ COMPGEN Fish `prog --oa=abc,` ************
--oa=abc,def
--oa=abc,ijk

************ COMPGEN Nushell `prog --oa=abc,` ************
--oa=abc,def
--oa=abc,ijk

************ COMPGEN Powershell `prog --oa=abc,` ************
def	0	def		39
ijk	0	ijk		39

************ COMPGEN Zsh `prog --oa=abc,` ************
--oa=abc,def	def	def	39
--oa=abc,ijk	ijk	ijk	39
