tests/snapshots/integration__compgen__multi_parts.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN Bash `prog --oa A/` ************
A/B

************ COMPGEN Fish `prog --oa A/` ************
A/B
A/B/

************ COMPGEN Nushell `prog --oa A/` ************
A/B 
A/B/

************ COMPGEN Powershell `prog --oa A/` ************
A/B	1	B		39
A/B/	0	B/		39

************ COMPGEN Zsh `prog --oa A/` ************
A/B 	B	B	39
A/B/	B/	B/	39
