tests/snapshots/integration__compgen__multi_parts2.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN Bash `prog --oa A/B/` ************
 
C 
D 

************ COMPGEN Fish `prog --oa A/B/` ************
A/B/
A/B/C
A/B/D

************ COMPGEN Nushell `prog --oa A/B/` ************
A/B/ 
A/B/C 
A/B/D 

************ COMPGEN Powershell `prog --oa A/B/` ************
A/B/	1	 		39
A/B/C	1	C		39
A/B/D	1	D		39

************ COMPGEN Zsh `prog --oa A/B/` ************
A/B/ 			39
A/B/C 	C	C	39
A/B/D 	D	D	39
