tests/snapshots/integration__compgen__nested_subcmds.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog ` ************
__argc_value=FILE	/color:default
cmd	/color:magenta
help	/color:magenta

************ COMPGEN `prog cmd` ************
__argc_value=FILE	/color:default
cmd	/color:magenta

************ COMPGEN `prog cmd ` ************
suba	/color:magenta
subb	/color:magenta
help	/color:magenta

************ COMPGEN `prog cmd s` ************
suba	/color:magenta
subb	/color:magenta

************ COMPGEN `prog cmd suba` ************
suba	/color:magenta

************ COMPGEN `prog cmd suba ` ************
__argc_value=path	/color:default

************ COMPGEN `prog cmd help ` ************
suba	/color:magenta
subb	/color:magenta
help	/color:magenta

************ COMPGEN `prog cmd help s` ************
suba	/color:magenta
subb	/color:magenta
