tests/snapshots/integration__compgen__no_comp_subcmds.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog ` ************
cmda	/color:magenta
cmdb	/color:magenta
help	/color:magenta

************ COMPGEN `prog cmdx ` ************
__argc_value=path	/color:default

************ COMPGEN `prog cmdx cmd` ************
__argc_value=path	/color:default
