tests/snapshots/integration__compgen__no_flags_options.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog no_arg ` ************
__argc_value=path	/color:default

************ COMPGEN `prog arg ` ************
__argc_value=FILE	/color:default
