tests/snapshots/integration__compgen__no_flags_options2.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog ` ************
cmda	/color:magenta
cmdb	/color:magenta
help	/color:magenta
